syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ceit.desktop.grpc.caCenter";
option java_outer_classname = "CAProto";
option objc_class_prefix = "HLW";

package caCenter;

service CaCenter {
  //终端注册
  rpc DeviceRegister (DeviceRegisterRequest) returns (DeviceRegisteReply) {}
  //终端注册注销
  rpc DeviceUnRegister (DeviceUnRegisterRequest) returns (DeviceUnRegisteReply) {}
  //软件注册
  rpc SoftRegister (SoftRegisterRequest) returns (SoftRegisteReply) {}
  //硬件认证
  rpc DeviceCheck (DeviceCheckRequest) returns (DeviceCheckReply) {}
}

//终端注册
message DeviceRegisterRequest {
  string username = 1;
}

message DeviceRegisteReply {
  int32 status = 1;
  string msg = 2;
  string result = 3;
}

//终端注册注销
message DeviceUnRegisterRequest {
  string username = 1;
  string devica_mac = 2;
}

message DeviceUnRegisteReply {
  int32 status = 1;
  string msg = 2;
  string result = 3;
}

//软件注册
message SoftRegisterRequest {
  string soft_Hash = 1;
}

message SoftRegisteReply {
  int32 status = 1;
  string msg = 2;
  string result = 3;
}

//硬件认证
message DeviceCheckRequest {
  string deviceHash = 1;
  string device_ip = 2;
}

message DeviceCheckReply {
  int32 status = 1;
  string msg = 2;
  string result = 3;
}